--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.13
   http: ^0.13.4
-
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
