--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
   shared_preferences: ^2.0.13
   http: ^0.13.4
+  
   intl: ^0.17.0
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/splash/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
