--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ flutter:
   assets:
     - assets/
     - assets/splash/
-  #   - images/a_dot_ham.jpeg
+    - assets/1872.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
