--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_svg: ^1.0.3
   ar_flutter_plugin: ^0.6.2
 
+  video_player: ^2.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,6 +58,7 @@ flutter:
     - assets/
     - assets/splash/
     - assets/1872.jpg
+    - assets/aea.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
