--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
 
   video_player: ^2.3.0
 
+  flutter_elegant_number_button: ^0.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
