--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   ed_screen_recorder: ^0.0.7
   permission_handler: ^8.1.6
   flutter_downloader: ^1.7.3
+  flutter_rating_bar: ^4.0.0
   path_provider: ^2.0.9
 
 dev_dependencies:
