--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
    <application
-        android:label="historyar_app"
+        android:label="HistoryAR"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
         <activity
