--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,16 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   path_provider: ^2.0.9
   custom_radio_group_list: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
